--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,7 @@ nav{
 nav > ul{
     display: flex;
     align-items: center;
+    margin: 0 200px;
 
 }
 nav li {
@@ -45,4 +46,16 @@ nav a{
     text-decoration: none;
     color:#474747 ;
 
+}
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding:30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-picture{
+    width:500px;
+    height: 500px;
 }
