--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,4 @@
-
+/*header section style*/
 body{
     font-family: 'Open Sans', sans-serif;
 }
@@ -9,6 +9,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 
 }
 
@@ -30,6 +31,19 @@ nav{
     border: 0;
 
 }
+ .section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700px;
+
+ }
+ .section-description{
+    color: #757575;
+    text-align: center;
+    font-family: open Sans;
+    font-size: 18px;
+ }
 
 nav > ul{
     display: flex;
@@ -49,13 +63,46 @@ nav a{
 }
 .header{
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
+
 .banner{
-    padding:30px 30px 30px 150px;
+    padding:30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
+.banner-content{
+    max-width: 500px;
+}
+
 .profile-picture{
     width:500px;
     height: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+
+}
+
+/*main section style*/
+
+/*about  section style*/
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+
 }
