--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -40,7 +40,7 @@ nav{
  }
  .section-description{
     color: #757575;
-    text-align: center;
+    
     font-family: open Sans;
     font-size: 18px;
  }
@@ -97,6 +97,11 @@ nav a{
 
 /*main section style*/
 
+main{
+  max-width: 1140px;
+  margin:0 auto ;
+}
+
 /*about  section style*/
 
 .about{
@@ -105,4 +110,11 @@ nav a{
     background: #FFF8F3;
     margin: 130px 0;
 
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.info-info{
+    text-align:center;
 }
