--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,6 +96,9 @@ nav a{
 }
 
 /*main section style*/
+main section{
+    margin-top: 130px;
+}
 
 main{
   max-width: 1140px;
@@ -117,4 +120,30 @@ main{
 }
 .info-info{
     text-align:center;
+}
+#whai-i-do{
+    padding: 30px 150px;
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow:0px 6px 50px 0px rgba(0,0,0,0.06) ;
+    
+
+}
+.skill-description{
+   color: #757575; 
+
+}
+
+.resume-colomn-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700px;
 }
