finished the resume section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -147,3 +147,35 @@ main{
     font-size: 30px;
     font-weight: 700px;
 }
+
+.resume-container{
+  
+   
+    display: flex;
+    gap:50px;
+
+}
+
+.resume-item-title{
+    color: var#474747;
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-weight: 700px;
+
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-institute, .resume-description{
+    color: #757575;
+
+}
+.resume-container hr {
+    margin:30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+    
