--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -94,6 +94,11 @@ nav a{
     margin-bottom: 20px;
 
 }
+.banner-description{
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
 
 /*main section style*/
 main section{
